--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -101,10 +101,10 @@ img{
 }
 
 	.logo{
-		float:left; font-size:1.375em; font-family: 'Roboto Condensed', sans-serif;
+		float:left; font-size:1.375em; font-family: 'Roboto Condensed', sans-serif; margin-right: 10px;
 	}
 	.contakt-basket{
-		float:right;
+		float:right; margin-top: -25px;
 	}
 		.contakt-basket p{
 			float:left; font-size:0.75em; font-weight:600;
@@ -129,6 +129,16 @@ img{
 			}
 .header-bottom{
 	padding:10px 0;
+}
+.user_nav{
+	 top: -3px;
+	 right: 20px;
+	 width:40%;
+	 height: 28px;
+}
+p.notice {
+	right: 20px;
+	width:40%;
 }
 	.menu{
 		float:left;
