--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,35 +1,56 @@
 <header>
 			<div class="center-block-main">
 		    	<div class="header-top clearfix">
-		        	<p class="logo">BIRUANG</p>
+		        	<p class="logo">BIRUANG   </p>
+				     <div class="user_nav">
+		          	<p class="notice"><%= notice %></p>
+            		<p class="alert"><%= alert %></p>
+						     <% if user_signed_in? %>
+						     <%= current_user.email %>, Не Вы?
+						     <%= link_to "Выход", destroy_user_session_path, method: :delete %>
+
+						     <% else %>
+						     <%= link_to "Регистрация", new_user_registration_path %> | 
+						     <%= link_to "Вход", user_session_path %>
+						     <% end %>
+
+              </div>
+
+
 		            <div class="contakt-basket">
 		            	<p class="header-phone">
 		            		<%= image_tag(image_path('ico-phone.jpg')) %> +371 282 20 760
+
 		              </p>
 		                <p class="header-basket">
 		                	<%= image_tag(image_path('ico-basket.jpg')) %> $ 99.54 <a href="#">Checkout</a>
 
 		                </p>
+
 		            </div>
-		        </div>
-		        <div class="header-bottom clearfix">
-		        	<nav>
-		            	<ul class="menu">
-		                	<li><a href="#">Home</a></li>
-		                    <li><a href="#">MEN</a></li>
-		                    <li><a href="#">WOMEN</a></li>
-		                    <li><a href="#">KIDS</a></li>
-		                    <li><a href="#">SALE</a></li>
-		                    <li><a href="#">ABOUT US</a></li>
-		                    <li><a href="#">SUPPORT</a></li>
-		                </ul>
-		            </nav>
+
+		      </div>
+		      <div class="header-bottom clearfix">
+	        	<nav>
+	            	<ul class="menu">
+	            			  <li><%= link_to 'Home', pages_home_path %></li>
+											<li><%= link_to 'MEN', pages_men_path %></li>
+											<li><%= link_to 'woMEN', pages_women_path %></li>                    
+											<li><%= link_to 'KIDS', pages_kids_path %></li>	
+											<li><%= link_to 'sale', pages_sale_path %></li>
+											<li><%= link_to 'ABOUT US', pages_aboutAs_path %></li>
+											<li><%= link_to 'SUPPORT', pages_support_path %></li>
+
+	              </ul>
+	          </nav>
 		            <div class="search-block">
 		            	<form action="" method="get">
 		                	<input class="search-btn" type="image" <%= image_tag(image_path('search-btn.jpg')) %>
 		                    <input type="search" class="search" placeholder="Search...">
 		                </form>
 		            </div>
-		        </div>
-		    </div>
+
+
+		      </div>
+		  </div>
 		</header>
